fixed issue with profile photo on safari

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,4 +43,6 @@ a {
   border: 8px solid #d3d3d3 !important;
   opacity: 1;
   overflow: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
+  mask-image: -webkit-radial-gradient(white, black);
 }
